--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,26 @@
+version: 2
+
 workflows:
   version: 2
   main:
     jobs:
       - go-current
-      - go-previous
       - go-latest
+
+jobs:
+  go-current:
+    docker:
+      - image: circleci/golang:1.11
+        environment:
+          GO111MODULE: "ON"
+    <<: *base
+  go-latest:
+    docker:
+      - image: circleci/golang:latest
+        environment:
+          GO111MODULE: "ON"
+    <<: *base
+
 base: &base
   working_directory: /go/src/github.com/kubeteam/cobra
   steps:
@@ -12,27 +28,5 @@ base: &base
     - run:
         name: "All Commands"
         command: |
-          mkdir -p bin
-          curl -Lso bin/shellcheck https://github.com/caarlos0/shellcheck-docker/releases/download/v0.4.6/shellcheck
-          chmod +x bin/shellcheck
-          go get -t -v ./...
-          PATH=$PATH:$PWD/bin go test -v ./...
-          go build
-          diff -u <(echo -n) <(gofmt -d -s .)
-          if [ -z $NOVET ]; then
-            diff -u <(echo -n) <(go tool vet . 2>&1 | grep -vE 'ExampleCommand|bash_completions.*Fprint');
-          fi
-version: 2
-jobs:
-  go-current:
-    docker:
-      - image: circleci/golang:1.10.0
-    <<: *base
-  go-previous:
-    docker:
-      - image: circleci/golang:1.9.4
-    <<: *base
-  go-latest:
-    docker:
-      - image: circleci/golang:latest
-    <<: *base
+          make spellcheck
+          make build
