Use temporary go-md2man fork. Fix tests broken by fork.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,12 +13,14 @@ jobs:
       - image: circleci/golang:1.11
         environment:
           GO111MODULE: "ON"
+          GOFLAGS: "-mod=vendor"
     <<: *base
   go-latest:
     docker:
       - image: circleci/golang:latest
         environment:
           GO111MODULE: "ON"
+          GOFLAGS: "-mod=vendor"
     <<: *base
 
 base: &base
